# tiny-tvm

./: CMakeLists.txt  build.sh  engineering_plan.md
cmake/toolchains/: arm-linux-gnueabihf.cmake
docs/: phase_task_checklist.md  phase_task_detail.md  plan.md
examples/json/: mlp.json
include/: utils.h
include/tiny_tvm/codegen/: c_codegen.h
include/tiny_tvm/frontend/json/: json_frontend.h
include/tiny_tvm/frontend/onnx/: onnx_frontend.h
include/tiny_tvm/ir/: graph.h
include/tiny_tvm/pass/: pass.h  pass_manager.h
include/tiny_tvm/runtime/: runtime.h
include/tiny_tvm/schedule/: schedule.h
include/tiny_tvm/support/: version.h
scripts/: build_arm.sh  build_host.sh  run_qemu.sh
src/codegen/: c_codegen.cpp
src/frontend/json/: json_frontend.cpp
src/frontend/onnx/: onnx_frontend.cpp
src/ir/: graph.cpp
src/pass/: pass_manager.cpp
src/pass/graph/: infer_shape.cpp
src/pass/memory/: naive_memory_planner.cpp
src/pass/schedule/: init_schedule.cpp
src/runtime/: runtime.cpp
src/tools/: ttvmc.cpp
tests/ir/: graph_smoke_test.cpp
tests/phase_task_test/: test_phase0.sh  test_phase1.sh  test_phase2.sh  test_phase3.sh  test_phase4.sh  test_phase5.sh  test_phase6.sh  test_phase7.sh  test_phase8.sh  test_phase9.sh
